# armllm_competition

./: .gitignore  README.md
matrix_arena/: README.md  challenge_statement.tex  pyproject.toml
matrix_arena/baselines/: hybrid_agent.py  low_rank_agent.py  mean_agent.py  random_attack_agent.py  ridge_agent.py
matrix_arena/examples/: agent_template.py
matrix_arena/examples/visualizations/: README.md
matrix_arena/scripts/: run_public_grader.py  run_tournament.py  visualize_match.py
matrix_arena/src/matrix_arena/: __init__.py  api.py  grader.py  instance.py  masks.py  ranking.py  scoring.py  seeds.py  tournament.py  utils.py  viz.py
matrix_arena/tests/: test_baselines.py  test_instance.py  test_masks.py  test_scoring.py  test_seeds.py  test_tournament.py  test_viz.py
